cmake_minimum_required(VERSION 3.25)

project(cpp_study)

set(CMAKE_CXX_STANDARD 11)

if(NOT WIN32)
    string(ASCII 27 Esc)
    set(ColourReset "${Esc}[m")
    set(ColourBold  "${Esc}[1m")
    set(Red         "${Esc}[31m")
    set(Green       "${Esc}[32m")
    set(Yellow      "${Esc}[33m")
    set(Blue        "${Esc}[34m")
    set(Magenta     "${Esc}[35m")
    set(Cyan        "${Esc}[36m")
    set(White       "${Esc}[37m")
    set(BoldRed     "${Esc}[1;31m")
    set(BoldGreen   "${Esc}[1;32m")
    set(BoldYellow  "${Esc}[1;33m")
    set(BoldBlue    "${Esc}[1;34m")
    set(BoldMagenta "${Esc}[1;35m")
    set(BoldCyan    "${Esc}[1;36m")
    set(BoldWhite   "${Esc}[1;37m")
endif()

# 这个值会被cache
SET(WHICH_DAY "0" CACHE STRING "Some user-specified option")
# message("${Yellow}WHICH_DAY=${WHICH_DAY}${ColourReset}")
message("The${Red} ${WHICH_DAY} ${ColourReset}day!!!Fighting~~")

file(GLOB SRC_SOURCES CONFIGURE_DEPENDS "${PROJECT_SOURCE_DIR}/**/*.cpp")

foreach(EXECUTABLE_FILE ${SRC_SOURCES})
    # message(STATUS ${EXECUTABLE_FILE})
    SET(replaced "")
    string(REPLACE ".cpp" "" replaced ${EXECUTABLE_FILE})
    string(REPLACE "${PROJECT_SOURCE_DIR}/" "" replaced ${replaced})
    set(NAME ${replaced})
    # message(STATUS "NAME=${NAME}")
    string(REGEX MATCHALL "[A-Za-z0-9]+" NAME_LIST ${NAME})
    # message(STATUS ${NAME_LIST})
    list(LENGTH NAME_LIST LEN)
    # message(STATUS "len = ${LEN}")
    list(GET NAME_LIST -1 LAST_NAME)
    # message(STATUS "lastName = ${LAST_NAME}")

    list(GET NAME_LIST 0 FIRST_NAME)
    # message("firstName=${FIRST_NAME}")

    string(REPLACE "day" "" REPLACE_DAY_STRING ${FIRST_NAME})
    # message("REPLACE_DAY_STRING=${REPLACE_DAY_STRING}")
    if(${REPLACE_DAY_STRING} STREQUAL ${WHICH_DAY})
        add_executable(${LAST_NAME} ${EXECUTABLE_FILE})
    endif()
endforeach(EXECUTABLE_FILE)
